version/0.10/_sources/api/ansys/geometry/core/_grpc/_services/v0/faces/GRPCFacesServiceV0.rst.txt






:class:`GRPCFacesServiceV0`
===========================


.. py:class:: ansys.geometry.core._grpc._services.v0.faces.GRPCFacesServiceV0(channel: grpc.Channel)

   Bases: :py:obj:`ansys.geometry.core._grpc._services.base.faces.GRPCFacesService`


   
   Faces service for gRPC communication with the Geometry server.

   This class provides methods to interact with the Geometry server's
   faces service. It is specifically designed for the v0 version of the
   Geometry API.

   :Parameters:

       **channel** : :obj:`grpc.Channel`
           The gRPC channel to the server.














   ..
       !! processed by numpydoc !!


.. py:currentmodule:: GRPCFacesServiceV0

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~get_surface`
            - Get the surface of a face.
          * - :py:attr:`~get_box_uv`
            - Get the UV box of a face.
          * - :py:attr:`~get_area`
            - Get the area of a face.
          * - :py:attr:`~get_edges`
            - Get the edges of a face.
          * - :py:attr:`~get_loops`
            - Get the loops of a face.
          * - :py:attr:`~get_color`
            - Get the color of a face.
          * - :py:attr:`~get_bounding_box`
            - Get the bounding box of a face.
          * - :py:attr:`~set_color`
            - Set the color of a face.
          * - :py:attr:`~get_normal`
            - Get the normal of a face.
          * - :py:attr:`~evaluate`
            - Evaluate a face at a given parameter.
          * - :py:attr:`~create_iso_parametric_curve`
            - Create an iso-parametric curve on a face.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~stub`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.geometry.core._grpc._services.v0.faces import GRPCFacesServiceV0


Attribute detail
----------------

.. py:attribute:: stub



Method detail
-------------

.. py:method:: get_surface(**kwargs) -> dict

   
   Get the surface of a face.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_box_uv(**kwargs) -> dict

   
   Get the UV box of a face.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_area(**kwargs) -> dict

   
   Get the area of a face.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_edges(**kwargs) -> dict

   
   Get the edges of a face.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_loops(**kwargs) -> dict

   
   Get the loops of a face.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_color(**kwargs) -> dict

   
   Get the color of a face.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_bounding_box(**kwargs) -> dict

   
   Get the bounding box of a face.
















   ..
       !! processed by numpydoc !!

.. py:method:: set_color(**kwargs) -> dict

   
   Set the color of a face.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_normal(**kwargs) -> dict

   
   Get the normal of a face.
















   ..
       !! processed by numpydoc !!

.. py:method:: evaluate(**kwargs) -> dict

   
   Evaluate a face at a given parameter.
















   ..
       !! processed by numpydoc !!

.. py:method:: create_iso_parametric_curve(**kwargs) -> dict

   
   Create an iso-parametric curve on a face.
















   ..
       !! processed by numpydoc !!




